tests/type-errors/tuple_with_no_literals_access.arl
archetype tuple_with_no_literals_access

variable res : nat * nat = (1, 2)

entry exec () {
  effect {
    do_require (res[0 * 0] = 1 and res[1 + 0] = 2, "ko")
  }
}
